--- a/config/boards/arm/adv360/adv360_left_defconfig
+++ b/config/boards/arm/adv360/adv360_left_defconfig
@@ -43,16 +43,23 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_PWM=y
 CONFIG_LED_PWM=y
 CONFIG_ZMK_BACKLIGHT=y
-CONFIG_ZMK_BACKLIGHT_BRT_START=80
+CONFIG_ZMK_BACKLIGHT_BRT_START=20
 CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 
 #BT configuration
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_BT_DIS_MANUF="Kinesis Corporation"
+CONFIG_BT_PRIVACY=y
+CONFIG_BT_GAP_PERIPHERAL_PREF_PARAMS=y
+CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=600
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=12
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=24
+CONFIG_BT_PERIPHERAL_PREF_LATENCY=30
 
 #Misc configuration
 CONFIG_USB_DEVICE_VID=0x29EA
 CONFIG_USB_DEVICE_PID=0x0362
 CONFIG_USB_DEVICE_MANUFACTURER="Kinesis Corporation"
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 CONFIG_BUILD_OUTPUT_UF2=y
